--- a/atividades/PROJETO/package.json
+++ b/atividades/PROJETO/package.json
@@ -4,8 +4,8 @@
   },
   "name": "projeto",
   "version": "1.0.0",
-  "main": "index.js",
-  "bin": "index.js",
+  "main": "inicio.js",
+  "bin": "inicio.js",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +13,13 @@
   "keywords": [],
   "author": "Alekssandher",
   "license": "ISC",
-  "description": ""
+  "description": "Projeto feito para o curso da italents em full-stack",
+  "pkg": {
+    "targets": [
+      "node14-linux-x64",
+      "node14-win-x64",
+      "node14-macos-x64"
+    ],
+    "output": "executaveis"
+  }
 }
